--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -4,7 +4,7 @@ FROM node:9.5.0
 RUN mkdir /build
 WORKDIR /build
 
-COPY package.json .
+COPY test/unit/package.json .
 RUN npm install
 
 # Run
@@ -12,6 +12,6 @@ FROM node:9.5.0
 
 COPY --from=0 /build /build/
 
-WORKDIR /tmp/project
+WORKDIR /project
 
 COPY . .
