--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Insecure Links Highlighter",
+  "name": "__MSG_extensionName__",
+  "description": "__MSG_extensionDescription__",
   "version": "1.0",
-  "description": "Highlight insecure links",
   "author": "Victor Engmark",
   "content_scripts": [
     {
@@ -18,5 +18,6 @@
   "icons": {
     "48": "icon.svg",
     "96": "icon.svg"
-  }
+  },
+  "default_locale": "en"
 }
