Add skipped test of links on FTP sites
Related to #8; still need to load the add-on into the browser for the test
to suceeed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,15 @@ services:
       context: .
       dockerfile: python/Dockerfile
     depends_on:
+      - ftpd
       - selenium
     volumes:
       - ./test/acceptance:/screenshots
+
+  ftpd:
+    image: stilliard/pure-ftpd
+    volumes:
+      - ./pure-ftpd:/etc/pure-ftpd/passwd
 
   selenium:
     image: selenium/standalone-firefox:3.9.1
