--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
+  "description": "Dependencies for testing and linting Insecure Links Highlighter",
+  "license": "GPL-3.0+",
   "devDependencies": {
     "eslint": "^4.17.0",
     "jsdom": "^11.6.2",
     "mocha": "^5.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:l0b0/insecure-links-highlighter.git"
   }
 }
