--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,10 @@
     "48": "icons/48.png",
     "96": "icons/96.png"
   },
-  "default_locale": "en"
+  "default_locale": "en",
+  "applications": {
+    "gecko": {
+      "id": "{da90161a-9c5c-4315-adae-2eedbe24810a}"
+    }
+  }
 }
