Copy files into Gradle Docker container
Avoids creating files owned by root in the project.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,12 @@ version: '3.2'
 services:
 
   acceptance_tests:
-    image: gradle:jdk8
+    build:
+      context: .
+      dockerfile: gradle/Dockerfile
     depends_on:
       - ftpd
       - selenium
-    user: root
-    volumes:
-      - type: bind
-        source: .
-        target: /home/gradle/project
-    working_dir: /home/gradle/project
 
   ftpd:
     image: stilliard/pure-ftpd
