--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,12 @@
+build/
+build.gradle
 CODE_OF_CONDUCT.md
 docker-compose.yml
 .dockerignore
 .git/
 .gitignore
 .gitmodules
+.gradle/
 icons/
 .idea/
 insecure-links-highlighter.xpi
