Simplify Docker ignore file by inverting to a whitelist

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,5 @@
-build/
-build.gradle
-CODE_OF_CONDUCT.md
-docker-compose.yml
-.dockerignore
-.git/
-.gitignore
-.gitmodules
-.gradle/
-icons/
-.idea/
-insecure-links-highlighter.xpi
-LICENSE
-_locales/
-Makefile
-make-includes/
-manifest.json
-nodejs/Dockerfile
-options.html
-pure-ftpd/
-README.md
-ruby/
-screenshots/
-src/
-.travis.yml
+*
+!nodejs/package.json
+!nodejs/package-lock.json
+!*.js
+!test/
