--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       - ./pure-ftpd:/etc/pure-ftpd/passwd
 
   selenium:
-    image: selenium/standalone-firefox-debug:3.9.1
+    build:
+      context: selenium
     ports:
       - "5900:5900"
     volumes:
