--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - sudo apt-get install -y optipng
 script:
   - make
-  - make test
+  - make GRADLE_USER=root test
 sudo: required
 services:
   - docker
