Pull out URL string checkers

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
       ],
       "js": [
         "defaultOptions.js",
+        "url.js",
         "highlight.js"
       ],
       "all_frames": true
