--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ before_install:
   - sudo apt-get install -y optipng
 script:
   - make
-  - make GRADLE_USER=root test
+  - sudo chgrp 1000 -R .
+  - make test
 sudo: required
 services:
   - docker
