Change owner/group to the same as the current directory after testing
Makes it possible to clean up the directories created by Gradle. See
<https://travis-ci.org/l0b0/insecure-links-highlighter/builds/349586049>.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ script:
   - make
   - sudo chgrp 1000 -R .
   - make test
+  - sudo chown --recursive --reference=. .gradle build
   - make clean
   - make verify-clean
 sudo: required
